--- a/sling/task/app/dashboard.css
+++ b/sling/task/app/dashboard.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron:400');
+
 .job-table {
-  width: calc(100% - 8px);
+  width: 100%;
   margin-top: 8px;
+  margin-right: 8px;
   margin-bottom: 8px;
 }
 
@@ -15,3 +18,16 @@
   margin-bottom: 8px;
 }
 
+.res {
+  padding: 8px;
+  width: 200px;
+  margin-left: 8px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  color: #00C000;
+  background: black;
+  font-family: Orbitron, arial;
+  font-size: 12pt;
+  border-style: ridge;
+  border-color: lightgray;
+}
