--- a/sling/task/app/dashboard.css
+++ b/sling/task/app/dashboard.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:400');
+@font-face {
+  font-family: lcd;
+  src: url(digital-7.mono.ttf);
+}
 
 .job-table {
   width: 100%;
@@ -19,15 +22,23 @@
 }
 
 .res {
-  padding: 8px;
+  padding: 4px;
   width: 175px;
   margin-left: 8px;
   margin-bottom: 8px;
   margin-top: 8px;
   color: #00C000;
   background: black;
-  font-family: Orbitron, arial;
-  font-size: 11pt;
+  font-family: arial;
+  font-weight: normal;
+  font-size: 14pt;
   border-style: ridge;
   border-color: lightgray;
 }
+
+.lcd {
+  font-family: lcd;
+  font-size: 20pt;
+  font-weight: normal;
+}
+
