Span and token rendering

--- a/sling/nlp/document/app/doc.css
+++ b/sling/nlp/document/app/doc.css
@@ -1,5 +1,13 @@
-main {
+#app {
+  width: 100%;
+  height: 100%;
+}
+
+#main {
   background-color: #eeeeee;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .card {
