--- a/sling/nlp/document/app/doc.css
+++ b/sling/nlp/document/app/doc.css
@@ -10,10 +10,9 @@
   overflow: hidden;
 }
 
-.card {
-  background-color: white;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.16), 0 2px 4px rgba(0,0,0,0.23);
-  padding: 10px 10px 10px 10px;
-  margin: 5px 5px 5px 5px;
+#docid {
+  background-color: #FFF;
+  color: #000;
+  padding: 10px;
 }
 
