--- a/app/style/docview.css
+++ b/app/style/docview.css
@@ -191,6 +191,7 @@ a:visited {
   position: relative;
   padding: 0px 2px 0px 2px;
   cursor: pointer;
+  word-wrap: break-word;
 }
 
 .b2 {
@@ -202,6 +203,7 @@ a:visited {
   position: relative;
   padding: 0px 2px 0px 2px;
   cursor: pointer;
+  word-wrap: break-word;
 }
 
 .b3 {
@@ -213,6 +215,7 @@ a:visited {
   position: relative;
   padding: 0px 2px 0px 2px;
   cursor: pointer;
+  word-wrap: break-word;
 }
 
 .callout {
