--- a/app/style/docview.css
+++ b/app/style/docview.css
@@ -19,6 +19,21 @@
   font: 20pt bold arial, helvetica;
 }
 
+.titlelink {
+  color: black;
+  text-decoration: none;
+}
+
+.titlelink:link {
+  color: black;
+  text-decoration: none;
+}
+
+.titlelink:visited {
+  color: black;
+  text-decoration: none;
+}
+
 a {
   color: black;
 }
