--- a/app/style/docview.css
+++ b/app/style/docview.css
@@ -1,18 +1,29 @@
 .docviewer {
+  display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100%;
-  padding: 0px 0px 0px 0px;
 }
 
-.themes {
-  margin-top: 10px;
-
-}
-
-.text-and-panels {
-  display: flex;
+.doctext {
+  flex: 1;
   height: 100%;
-  background: #eeeeee;
+  overflow-y: auto;
+  padding: 5px;
+  background: white;
+  border: 2px solid #cccccc;
+  box-sizing: border-box;
+  font: 13pt lora, georgia, serif;
+}
+
+.docspacer {
+  flex: 0 0 10px;
+}
+
+.docpanels {
+  flex: 1;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .title {
@@ -44,22 +55,6 @@ a:link {
 
 a:visited {
   text-decoration: underline;
-}
-
-.doctext {
-  flex: 1;
-  overflow-x: auto;
-  margin: 10px 5px 10px 10px;
-  background: white;
-  border: 2px solid #cccccc;
-  font: 13pt lora, georgia, serif;
-  padding: 10px;
-}
-
-.docpanels {
-  flex: 1;
-  overflow-x: auto;
-  margin: 10px 10px 10px 5px;
 }
 
 .panel {
